--- a/war/index.html
+++ b/war/index.html
@@ -22,9 +22,10 @@
 		<li><a href="index.html" class="active">Home<span></span></a></li>
 		<li><a href="visualFeed.html">Visual Feeds<span></span></a></li>
 		<li><a href="resources.html">Resources<span></span></a></li>
+		<li><a href="license.html">License<span></span></a></li>
 	</ul>
 	<p id="layoutdims">
-    <a href="" style="float:left;">Source</a>
+    <a href="https://github.com/hemantasapkota/social-media-for-aid-awareness" style="float:left;">Source at GIT HUB</a>
     <iframe allowtransparency="true" 
             frameborder="0" 
             scrolling="no"
