--- a/war/license.html
+++ b/war/license.html
@@ -21,13 +21,13 @@
 	<ul>
 		<li><a href="index.html">Home<span></span></a></li>
 		<li><a href="visualFeed.html">Visual Feeds<span></span></a></li>
-		<li><a href="resources.html" class="active">Resources<span></span></a></li>
-		<li><a href="license.html">License<span></span></a></li>
+		<li><a href="resources.html">Resources<span></span></a></li>
+		<li><a href="license.html" class="active">License<span></span></a></li>
 	</ul>
 	<p id="layoutdims">
     <a href="https://github.com/hemantasapkota/social-media-for-aid-awareness" style="float:left;">Source at GIT HUB</a>
     <iframe allowtransparency="true" 
-            frameborder="0" 
+            frameborder="0" This work is licensed under the Creative Commons Attribution 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by/3.0/ or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.
             scrolling="no"
             src="http://platform.twitter.com/widgets/follow_button.html?screen_name=NepalAid"
             style="width:200px; height:20px;"></iframe>
@@ -38,17 +38,8 @@
 	<div class="colleft">
 		<div class="col1">
 			<!-- Column 1 start -->
-      <h1>Resources</h1>
-      <ul>
-         <li><a href="http://www.google.com/publicdata/">Google Public Data Explorer</a></li>
-         <li><a href="http://code.google.com/apis/publicdata/">DSPL</a> bundle of sample data on projects funded by world bank in Nepal</li>
-             <a href="dspl_projects_world_bank_nepal.zip">[Download]</a>
-         <li><a href="http://www.google.com/publicdata/overview?ds=z3ikuqdjllkmqh_">Visualization for the above DSPL file</a></li>
-         <li><a href="presentation/ppt_Social_Media_For_Aid_Awareness.ppt">Presentation made at Aid Barcamp, Kathmandu on 4 Aug 2011 (PPT)</a> 
-             <a href="http://nepalaid.yipl.com.np/">More about it at here</a></li>
-         <li><a href="presentation/Social_Media_For_Aid_Awareness.odp">Presentation made at Aid Barcamp, Kathmandu on 4 Aug 2011 (ODP)</a></li>
-      </ul>
- 			<!-- Column 1 end -->
+      <h1>License</h1>
+      <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Social Media For Aid Awareness</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/hemantasapkota" property="cc:attributionName" rel="cc:attributionURL">Hemanta Sapkota</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/hemantasapkota/social-media-for-aid-awareness" rel="dct:source">github.com</a>.
 	</div>
 
 		<div class="col2">
